--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.1",
+    "mixpanel-browser": "^2.45.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-countup": "^6.3.2",
