--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-type-animation": "^2.1.1",
     "sass": "^1.54.9",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
