--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.54.9",
     "slick-carousel": "^1.8.1",
+    "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
