--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@devexpress/dx-react-chart": "^3.0.6",
-    "@devexpress/dx-react-chart-material-ui": "^3.0.6",
-    "@devexpress/dx-react-core": "^3.0.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.8",
@@ -14,9 +11,11 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.1",
+    "chart.js": "^3.9.1",
     "mixpanel-browser": "^2.45.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^4.3.1",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
