--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.2.1",
     "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "mixpanel-browser": "^2.45.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
