--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.8",
+    "@mui/x-data-grid": "^5.17.13",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,11 +22,13 @@
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.0",
     "react-script": "^2.0.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-typewriter": "^4.0.5",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
     "sass": "^1.54.9",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
