--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,24 @@
 {
+  "editor.bracketPairColorization.enabled": true,
+  "editor.guides.bracketPairs":"active",
+  "background.enabled": true,
+  "background.loop": false,
+  "background.useDefault": false,
+  "background.useFront": false,
+  "background.style": {
+        "content": "''",
+        "pointer-events": "none",
+        "position": "absolute",
+        "z-index": "99999",
+        "width": "70%",
+        "height": "100%",
+        "margin-left":"30%",
+        "background-position": "right",
+        "background-size": "cover",
+        "background-repeat": "no-repeat",
+        "opacity": 0.1
+    },
+  "background.customImages": [
+        "E:/Wallpaper-Anime-Naruto-Kakashi-Hatake-4334x2840px-4k-F10 (1)",
+    ]
 }
