--- a/package.json
+++ b/package.json
@@ -12,22 +12,25 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.2.3",
     "chart.js": "^3.9.1",
     "chartjs-plugin-datalabels": "^2.1.0",
     "mixpanel-browser": "^2.45.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.6.0",
     "react-chartjs-2": "^4.3.1",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-markdown": "^8.0.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.0",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "react-simple-typewriter": "^4.0.5",
     "react-slick": "^0.29.0",
+    "react-visibility-sensor": "^5.1.1",
     "redux": "^4.2.0",
     "sass": "^1.54.9",
     "slick-carousel": "^1.8.1",
@@ -57,5 +60,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
