--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-scripts": "^5.0.1",
     "react-simple-typewriter": "^4.0.5",
     "react-slick": "^0.29.0",
-    "react-visibility-sensor": "^5.1.1",
+    "react-visibility-sensor-v2": "^1.0.0",
     "redux": "^4.2.0",
     "sass": "^1.54.9",
     "slick-carousel": "^1.8.1",
